--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "svelte-preprocess": "^5.0.0",
     "svelte-spa-router": "^3.3.0",
     "tailwindcss": "3.2.7"
+  },
+  "dependencies": {
+    "tone": "^14.7.77"
   }
 }
