--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@tonejs/midi": "^2.0.28",
     "autoprefixer": "^10.4.13",
     "axios": "^1.4.0",
+    "midi-json-parser": "^8.1.43",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-svelte": "^2.10.1",
@@ -28,9 +30,7 @@
     "svelte": "^3.0.0",
     "svelte-preprocess": "^5.0.0",
     "svelte-spa-router": "^3.3.0",
-    "tailwindcss": "3.2.7"
-  },
-  "dependencies": {
+    "tailwindcss": "3.2.7",
     "tone": "^14.7.77"
   }
 }
